# Proiect_Parcuri_V2

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resurse.qrc
